--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ button:nth-child(3) {
   border-radius: 45px;
 }
 
-.printHere {
+.printDiv {
   border: 2px solid red;
   color: rgb(255, 255, 255);
   font-size: 4rem;
@@ -65,6 +65,6 @@ button:nth-child(3) {
   width: 23rem;
 }
 
-.printHere p {
+.printP {
   overflow-wrap: break-word;
 }
