--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   place-items: center;
   height: 100vh;
   width: 100vw;
-  background-color: rgb(255, 255, 255);
+  background-color: #16262d;
 }
 
 .calculator {
@@ -56,7 +56,6 @@ button:nth-child(3) {
 }
 
 .printDiv {
-  border: 2px solid red;
   color: rgb(255, 255, 255);
   font-size: 4rem;
   display: grid;
